--- a/docs/Trabajo/style/bib/references.bib
+++ b/docs/Trabajo/style/bib/references.bib
@@ -1,17 +1,17 @@
 @Book{Burgos:2004,
     author =    "Juan de Burgos" ,
-     title =     "CÃ¡lculo infinitesimal de una variable" ,
+     title =     "Cálculo infinitesimal de una variable" ,
      publisher = "McGraw-Hill" ,
      year =      "2004" ,
-     address =   "Edificio  Valrealty, 1ÂªPlanta.Basauri,17. Madrid." 
+     address =   "Edificio  Valrealty, 1ªPlanta.Basauri,17. Madrid." 
 }
 
 @Book{SpivakCal:1998,
-  title="Calculus:CÃ¡lculo infinitesimal",
+  title="Calculus:Cálculo infinitesimal",
   author="Michael Spivak",
   isbn="84-291-5136-2",
   year="1998",
-  publisher="Editorail RevertÃ©,S.A"
+  publisher="Editorail Reverté,S.A"
 }
 
 @MISC{URL:XML,
@@ -20,19 +20,21 @@
 }
 
 @MISC{URL:XML2,
-  note   = {http://www.buscabiografias.com/bios/biografia/verDetalle/2155/Brook Taylor},
+  note   = {http://www.buscabiografias.com/bios/biografia/verDetalle/2155/Brook Taylor}
 }
 
 @MISC{URL:XML3,
-  note   = {http://ordenador.wingwit.com/Programacion/python-programming/93912.html#.U2_W3vl5N1Y},
+  note   = {http://ordenador.wingwit.com/Programacion/python-programming/93912.html\#.U2\_W3vl5N1Y}
 }
 
 @MISC{URL:XML4,
-  note   = {http://fr.wikiversity.org/wiki/Fonctions_exponentielles_et_logarithme_n%C3%A9p%C3%A9rien_%28section_non_scientifique%29/%C3%89tude_de_la_fonction_logarithme_n%C3%A9p%C3%A9rien},
-}
-@MISC{URL:XML5,
-   note  = {http://ordenador.wingwit.com/Programacion/python-programming/93912.html#.U2_XGPl5N1Y}
+  note   = {http://fr.wikiversity.org}
 }   
+  
+@MISC{URL:XML5,
+   note  = {http://ordenador.wingwit.com/Programacion/python-programming/93912.html\#.U2\_XGPl5N1Y}
+}   
+
 @MISC{URL:XML6,
    note  = {http://es.scribd.com/doc/8557124/Series-de-Taylor-con-Python}
 }   
@@ -42,5 +44,5 @@
 }   
 
 @MISC{URL:XML8,
-   note={http://recursostic.educacion.es/descartes/web/materiales_didacticos/Desarrollo_serie_taylor/Desarrollo_en_serie_de_taylor.htm}
+   note={http://recursostic.educacion.es/descartes/web/materiales\_didacticos/Desarrollo\_serie\_taylor/Desarrollo\_en\_serie\_de\_taylor.htm}
 }
